--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "^7.27.0",
     "eslint-plugin-adonis": "^1.3.1",
     "pino-pretty": "^5.0.2",
+    "sass": "^1.34.1",
+    "sass-loader": "^11.0.0",
     "typescript": "~4.2",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
@@ -23,7 +25,7 @@
     "@adonisjs/core": "^5.1.7",
     "@adonisjs/repl": "^3.1.2",
     "@adonisjs/session": "^6.0.3",
-    "@adonisjs/shield": "^7.0.2",
+    "@adonisjs/shield": "^7.0.4",
     "@adonisjs/view": "^6.0.2",
     "@snowdog/front-end-recrutment-test": "1.0.0",
     "proxy-addr": "^2.0.7",
