--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/shield": "^7.0.4",
     "@adonisjs/view": "^6.0.2",
     "@snowdog/front-end-recrutment-test": "1.0.0",
+    "axios": "^0.21.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
