--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "^0.13.7",
     "source-map-support": "^0.5.19"
   }
 }
